carga masiva de productos

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Facturación Effective</title>
-  
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/logo.ico">
@@ -14,10 +14,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <style>
-   body {
-    background: url(assets/images/fondo.jpg) no-repeat center center fixed;
-    background-size: cover;
-  }
+    body {
+      background: url(assets/images/fondo.jpg) no-repeat center center fixed;
+      background-size: cover;
+    }
   </style>
 
 </head>
@@ -25,22 +25,46 @@
 <body>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase.js"></script>
   <script>
     $(document).ready(function () {
       $('[data-toggle="tooltip"]').tooltip();
+    }); 
+    var time = 600000;
+    // se llamará a la función que confirmar Cierre después de 10 segundos
+    var temp = setTimeout(confirmarCierre, time);
+
+    // hacemos que al pulsar en los botones de Alertify no se propaguen los eventos
+    $("body").on("click", ".ajs-button", function (e) {
+      e.stopPropagation();
     });
+
+    // cuando se detecte actividad en cualquier parte de la app
+    $(document).on('click keyup keypress keydown blur change', function (e) {
+      // borrar el temporizador de la funcion confirmarCierre
+      clearTimeout(temp);
+      // y volver a iniciarlo con 10segs
+      temp = setTimeout(confirmarCierre, time);
+    //  console.log('actividad detectada');
+    });
+
+    function confirmarCierre() {
+      //le doy un tiempo a la funcion cerrar sesion para que el usuario tenga un tiempo para confirmar, sino lo hizo en el tiempo se cerrara la sesion automaticamente
+      //var cerrar = setTimeout(cerrarSesion,5000);//5 segs de prueba
+      localStorage.clear();
+      location.reload();
+    }
   </script>
- 
+
   <app-root></app-root>
 </body>
 
